# chronotext-playground

./: .gitignore  LICENSE  README.md
Common/Path/: Path3D.cpp  Path3D.h
Common/Tasks/: HttpTask.cpp  HttpTask.h
Common/Testing/: TestingBase.cpp  TestingBase.h  TestingSketch.cpp  TestingSketch.h
Sketches/ContextRework/android/: AndroidManifest.xml  setup-android
Sketches/ContextRework/android/jni/: Android.mk  Application.mk
Sketches/ContextRework/android/src/org/chronotext/ContextRework/: MainActivity.java
Sketches/ContextRework/ios/: Config.xcconfig  DebugConfig.xcconfig  ReleaseConfig.xcconfig  Target1-Info.plist  Target1-Prefix.pch
Sketches/ContextRework/ios/Classes/: AppDelegate.h  AppDelegate.mm
Sketches/ContextRework/ios/ContextRework.xcodeproj/: project.pbxproj
Sketches/ContextRework/ios/ContextRework.xcodeproj/xcshareddata/xcschemes/: Target1.xcscheme
Sketches/ContextRework/osx/: Config.xcconfig  DebugConfig.xcconfig  Prefix.pch  ReleaseConfig.xcconfig
Sketches/ContextRework/osx/Classes/: Application.cpp  Application.h
Sketches/ContextRework/osx/ContextRework.xcodeproj/: project.pbxproj
Sketches/ContextRework/src/: Sketch.cpp  Sketch.h  TestingBase.h  TestingMemory.cpp  TestingMemory.h  TestingMisc.cpp  TestingMisc.h  TestingTasks.cpp  TestingTasks.h  main.cpp
Sketches/LogRework/osx/: Config.xcconfig  Info.plist  Prefix.pch  ReleaseConfig.xcconfig
Sketches/LogRework/osx/LogRework.xcodeproj/: project.pbxproj
Sketches/LogRework/src/: Sketch.cpp
Sketches/TestBed1/: README.md
Sketches/TestBed1/android/: AndroidManifest.xml  ant.properties  setup-android  setup.sh
Sketches/TestBed1/android/jni/: Android.mk  Application.mk
Sketches/TestBed1/android/src/org/chronotext/ContextRework/: MainActivity.java
Sketches/TestBed1/android/src/org/chronotext/TestBed1/: MainActivity.java
Sketches/TestBed1/assets/: DroidSerif_Regular.xml  TextBIDI.xml  droid-sans-fallback.xml  font-config.xml  sans-serif.xml  unicode.xml
Sketches/TestBed1/ios/: Config.xcconfig  DebugConfig.xcconfig  DistributionConfig.xcconfig  Info.plist  ReleaseConfig.xcconfig
Sketches/TestBed1/ios/Classes/: Application.h  Application.mm
Sketches/TestBed1/ios/TestBed1.xcodeproj/: project.pbxproj
Sketches/TestBed1/ios/TestBed1.xcodeproj/xcshareddata/xcschemes/: Target1.xcscheme
Sketches/TestBed1/osx/: Config.xcconfig  DebugConfig.xcconfig  ReleaseConfig.xcconfig
Sketches/TestBed1/osx/Classes/: Application.cpp
Sketches/TestBed1/osx/TestBed1.xcodeproj/: project copy.pbxproj  project.pbxproj
Sketches/TestBed1/osx/TestBed1.xcodeproj/xcshareddata/xcschemes/: TestBed1.xcscheme
Sketches/TestBed1/src/: ObservableString.h  Sketch.cpp  Sketch.h  TestTask.cpp  TestTask.h  TestingBase.h  TestingDemangling.cpp  TestingDemangling.h  TestingIO.cpp  TestingIO.h  TestingIOService.cpp  TestingIOService.h  TestingMemory.cpp  TestingMemory.h  TestingMemory1.cpp  TestingMemory1.h  TestingMemory2.cpp  TestingMemory2.h  TestingMemoryMapping.cpp  TestingMemoryMapping.h  TestingMisc.cpp  TestingMisc.h  TestingStringKey.cpp  TestingStringKey.h  TestingTasks.cpp  TestingTasks.h  TestingZFont.cpp  TestingZFont.h
Sketches/TestBed2/: README.md
Sketches/TestBed2/android/: AndroidManifest.xml  ant.properties  clean.sh  custom_rules.xml  setup-android  setup.sh
Sketches/TestBed2/android/jni/: Android.mk  Application.mk
Sketches/TestBed2/android/src/org/chronotext/TestBed2/: MainActivity.java
Sketches/TestBed2/ios/: Config.xcconfig  DebugConfig.xcconfig  DistributionConfig.xcconfig  ReleaseConfig.xcconfig  Target1-Info.plist  ios-deploy
Sketches/TestBed2/ios/Classes/: Application.h  Application.mm
Sketches/TestBed2/ios/Target1/: Config.xcconfig  DebugConfig.xcconfig  Info.plist  ReleaseConfig.xcconfig
Sketches/TestBed2/ios/Target2/: Config.xcconfig  DebugConfig.xcconfig  DistributionConfig.xcconfig  Info.plist  ReleaseConfig.xcconfig
Sketches/TestBed2/ios/TestBed2.xcodeproj/: project.pbxproj
Sketches/TestBed2/ios/TestBed2.xcodeproj/xcshareddata/xcschemes/: Target1.xcscheme  Target2.xcscheme
Sketches/TestBed2/osx/: Config.xcconfig  DebugConfig.xcconfig  Info.plist  ReleaseConfig.xcconfig
Sketches/TestBed2/osx/Classes/: Application.cpp  Application.h
Sketches/TestBed2/osx/TestBed2.xcodeproj/: project.pbxproj
Sketches/TestBed2/src/: Sketch.cpp  Sketch.h  TestTask.h  TestingBase.cpp  TestingBase.h  TestingMemory.h  TestingMisc.cpp  TestingNetwork.cpp  TestingNetwork.h  TestingSound.cpp  TestingSound.h  TestingSound1.cpp  TestingSound1.h  TestingSound2.cpp  TestingSound2.h  main.cpp
Sketches/data/: credits.txt
Tests/EmscriptenFilePackaging/: main.cpp  run.sh
Tests/TestingFileSystem1/: CMakeLists.txt  CTestConfig.cmake  Platform.h  main.cpp  pre.js  resources.rc
Tests/TestingFileSystem1/src/: Log.h  Platform.h  main.cpp
Tests/TestingFileSystem2/: CMakeLists.txt  CTestConfig.cmake  pre.js
Tests/TestingFileSystem2/android/: AndroidManifest.xml.in  MainActivity.java.in  ant.properties.in  install.instrument.sh.in  install.sh.in  test.sh.in
Tests/TestingFileSystem2/android/tests/: AndroidManifest.xml.in  MainActivityTests.java.in  TestRunner.java.in
Tests/TestingFileSystem2/mxe/: resources.rc
Tests/TestingFileSystem2/src/: Log.h  Platform.h  main.cpp
Tests/common/: Platform.h
Tests/common/android/src/org/chronotext/: TestRunner.java
Tests/common/cmake/: install.symlink.sh.in
Tests/common/cmake/android/: ant.properties.in  install.push.sh.in  run.instrument.sh.in
Tests/common/include/: Platform.h
Tests/common/src/: Bridge.cpp  Bridge.h  Platform.cpp  Platform.h
Tools/: ios-deploy
